Style fixes: fix header/footer on landing page, fix text-overflow on titles

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -272,3 +272,8 @@ img#neh-logo {
   border-top:1px solid #AAA;
   border-bottom:1px solid #AAA;
 }
+
+.footer{
+  background-color: #EEEEEE;
+  height: 60px;
+}
