--- a/app/assets/stylesheets/offcanvas.css
+++ b/app/assets/stylesheets/offcanvas.css
@@ -138,8 +138,6 @@ body#documents.show .navbar button#leftburger,body#documents.show .navbar button
 
 .home-image img {
 	width: 100%;
-	height:200px;
-
 }
 
 .well.devise, #omniauth-links {
